# space-data-network-plugins

./: .gitmodules  README.md  package.json
cmake/: EnsureEmsdk.cmake  test_sixdof_core  test_sixdof_core.cpp
plugins/ascent-reconstruct/: README.md  plugin-manifest.json
plugins/ascent-reconstruct/src/cpp/: CMakeLists.txt  wasm_api.cpp
plugins/ascent-reconstruct/src/cpp/include/ascent_reconstruct/: estimator.h  trajectory.h  types.h
plugins/ascent-reconstruct/src/cpp/src/: estimator.cpp  trajectory.cpp
plugins/ascent-reconstruct/src/cpp/tests/: test_ascent_reconstruct.cpp
plugins/da-asat-predictor/: README.md  plugin-manifest.json
plugins/da-asat-predictor/src/cpp/: CMakeLists.txt  wasm_api.cpp
plugins/da-asat-predictor/src/cpp/include/da_asat/: engagement.h  interceptor.h  propagator.h  types.h
plugins/da-asat-predictor/src/cpp/src/: engagement.cpp  interceptor.cpp  propagator.cpp
plugins/da-asat-predictor/src/cpp/tests/: test_da_asat.cpp
plugins/domain-awareness-pipeline/: README.md  build.sh  plugin-manifest.json
plugins/domain-awareness-pipeline/src/cpp/: CMakeLists.txt  wasm_api.cpp
plugins/domain-awareness-pipeline/src/cpp/include/da_pipeline/: ascent_estimator.h  engagement.h  exclusion_zone.h  notam_parser.h  ntm_parser.h  pipeline.h  sgp4.h  tle_correlator.h  trajectory.h  types.h
plugins/domain-awareness-pipeline/src/cpp/src/: ascent_estimator.cpp  engagement.cpp  exclusion_zone.cpp  notam_parser.cpp  ntm_parser.cpp  pipeline.cpp  sgp4.cpp  tle_correlator.cpp  trajectory.cpp
plugins/domain-awareness-pipeline/src/cpp/tests/: test_da_pipeline.cpp
plugins/drama/: LICENSE  README.md  build.sh  plugin-manifest.json
plugins/drama/src/: wasm_api.cpp
plugins/drama/src/cpp/: CMakeLists.txt
plugins/drama/src/cpp/include/: constants.h  types.h
plugins/drama/src/cpp/src/: ares.cpp  compliance.cpp  croc.cpp  master.cpp  oscar.cpp  sara.cpp  types.cpp
plugins/drama/src/cpp/tests/: test_drama.cpp
plugins/exclusion-zone-tle-correlator/: LICENSE  README.md  build.sh  plugin-manifest.json
plugins/exclusion-zone-tle-correlator/src/cpp/: CMakeLists.txt  wasm_api.cpp
plugins/exclusion-zone-tle-correlator/src/cpp/include/tle_correlator/: correlator.h  geometry.h  sgp4.h  types.h
plugins/exclusion-zone-tle-correlator/src/cpp/src/: correlator.cpp  geometry.cpp  sgp4.cpp
plugins/exclusion-zone-tle-correlator/src/cpp/tests/: test_tle_correlator.cpp
plugins/notam-archive/: README.md  plugin-manifest.json
plugins/notam-archive/src/cpp/: CMakeLists.txt  wasm_api.cpp
plugins/notam-archive/src/cpp/include/notam_archive/: analyzer.h  archive.h  types.h
plugins/notam-archive/src/cpp/src/: analyzer.cpp  archive.cpp
plugins/notam-archive/src/cpp/tests/: test_notam_archive.cpp
plugins/ntm-scraper/: README.md  build.sh  plugin-manifest.json
plugins/ntm-scraper/src/cpp/: CMakeLists.txt  wasm_api.cpp
plugins/ntm-scraper/src/cpp/include/ntm_scraper/: archive.h  parser.h  types.h
plugins/ntm-scraper/src/cpp/src/: archive.cpp  parser.cpp
plugins/ntm-scraper/src/cpp/tests/: test_ntm_scraper.cpp
